--- a/index.html
+++ b/index.html
@@ -16,31 +16,30 @@
   </head>
   <body>
     <header>
-      <nav class="nav-bar">
-        <div>
-          <h2>Shane Bramble-Wade</h2>
-        </div>
+      <h1>
+        <a href="/">Shane Bramble-Wade</a>
+      </h1>
 
-        
-          <ul>
-            <li>
-              <a href="#about-me">About Me</a>
-            </li>
-            <li>
-              <a href="#work">Work</a>
-            </li>
-            <li>
-              <a href="#contact">Contact</a>
-            </li>
-            <li>
-              <a
-                href="./assets/docs/Software Engineering 0.3V.pdf"
-                target="_blank"
-                >Resume</a
-              >
-            </li>
-          </ul>
-        
+      <!-- Navigation Links -->
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About Me</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+          <li>
+            <a
+              href="./assets/docs/Software Engineering 0.3V.pdf"
+              target="_blank"
+              >Resume</a
+            >
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -81,9 +80,19 @@
     <!-- Footer Section  -->
     <footer class="footer">
       <p>&copy; Copyright 2022 Shane Bramble-Wade</p>
-      <i class="fa-brands fa-github"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-linkedin"></i>
+      <div class="socials">
+        <a href="https://github.com/shanebramble" target="_blank"
+          ><i class="fa-brands fa-github fa-xl"></i
+        ></a>
+        <a href="https://twitter.com/shanebramble" target="_blank"
+          ><i class="fa-brands fa-twitter fa-xl"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/shane-bramble-wade-771158112/"
+          target="_blank"
+          ><i class="fa-brands fa-linkedin fa-xl"></i
+        ></a>
+      </div>
     </footer>
   </body>
 </html>
