included a hero background image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- Header Section  -->
     <header>
       <h1>
         <a href="/">Shane Bramble-Wade</a>
@@ -45,9 +46,12 @@
 
     <!-- Hero Section  -->
     <section class="hero">
-      <h3>Hi, I'm Shane</h3>
-      <p>I'm a full stack developer</p>
+      <div class="hero-text">
+        <h2>Hi, I'm Shane</h2>
+        <p>I'm a full stack developer</p>
+      </div>
     </section>
+
     <!-- About Me Section  -->
     <section id="about-me" class="about">
       <div>
