improved initial styling of hero section

--- a/index.html
+++ b/index.html
@@ -47,16 +47,23 @@
     <!-- Hero Section  -->
     <section class="hero">
       <div class="hero-text">
-        <h2>Hi, I'm Shane</h2>
-        <p>I'm a full stack developer</p>
+        <h2>Hi,<span class="hero-text-myname"> I'm Shane</span></h2>
+        <p>I'm a full stack developer.</p>
       </div>
     </section>
 
     <!-- About Me Section  -->
     <section id="about-me" class="about">
       <div>
-        <h4>About me</h4>
+        <div class="section-title">
+          <h4>About me</h4>
+        </div>
+
         <div>
+          <div>
+            <!-- <img src="./assets/images/Shane professional.jpg" alt=""> -->
+          </div>
+          
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni,
             officiis. Ipsum eum, laborum saepe aperiam quis consectetur velit
@@ -74,11 +81,16 @@
     </section>
     <!-- Work Section  -->
     <section id="work" class="projects">
-      <h4>Work</h4>
+      <div class="section-title">
+        <h4>Work</h4>
+      </div>
     </section>
     <!-- Contact Section  -->
     <section id="contact" class="contact">
-      <h4>Contact</h4>
+      <div class="section-title">
+        <h4>Contact</h4>
+      </div>
+
       <p>Have a question or want to work together?</p>
     </section>
     <!-- Footer Section  -->
