--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 
     <!-- About Me Section  -->
     <section id="about-me" class="about">
-      <div>
-        <div class="section-title">
-          <h4>About me</h4>
+      <div class="flex-row">
+        <h4 class="section-title">About me</h4>
+      </div>
+
+      <div class="about-me-info">
+        <div class="about-me-img">
+          <img src="./assets/images/Shane professional.jpg" alt="" />
         </div>
 
-        <div>
-          <div>
-            <!-- <img src="./assets/images/Shane professional.jpg" alt=""> -->
-          </div>
-          
+        <div class="about-me-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni,
             officiis. Ipsum eum, laborum saepe aperiam quis consectetur velit
@@ -74,20 +74,24 @@
             explicabo esse et ducimus! Minima, mollitia. Lorem ipsum, dolor sit
             amet consectetur adipisicing elit. Magni beatae, incidunt totam in,
             similique voluptas mollitia nobis magnam fuga, rem nesciunt
-            consequuntur sint? A quo laboriosam, at suscipit ut non.
+            consequuntur sint? A quo laboriosam, at suscipit ut non. Lorem ipsum
+            dolor sit, amet consectetur adipisicing elit. Eligendi reprehenderit
+            soluta autem, sed, quas explicabo asperiores voluptas tenetur ea ad
+            at. Voluptatem, necessitatibus tempora accusamus eius optio nemo rem
+            recusandae!
           </p>
         </div>
       </div>
     </section>
     <!-- Work Section  -->
     <section id="work" class="projects">
-      <div class="section-title">
+      <div>
         <h4>Work</h4>
       </div>
     </section>
     <!-- Contact Section  -->
     <section id="contact" class="contact">
-      <div class="section-title">
+      <div>
         <h4>Contact</h4>
       </div>
 
