centered and styled the about me section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 
       <div class="about-me-info">
         <div class="about-me-img">
-          <img src="./assets/images/Shane professional.jpg" alt="" />
+          <img
+            src="./assets/images/Shane professional-modified.png"
+            alt="A professional selfie of Shane"
+          />
         </div>
 
         <div class="about-me-text">
@@ -86,13 +89,13 @@
     <!-- Work Section  -->
     <section id="work" class="projects">
       <div>
-        <h4>Work</h4>
+        <h4 class="section-title">Work</h4>
       </div>
     </section>
     <!-- Contact Section  -->
     <section id="contact" class="contact">
       <div>
-        <h4>Contact</h4>
+        <h4 class="section-title">Contact</h4>
       </div>
 
       <p>Have a question or want to work together?</p>
