improved the flex styling for work section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- About Me Section  -->
     <section id="about-me" class="about">
       <div class="flex-row">
-        <h4 class="section-title">About me</h4>
+        <h2 class="section-title">About me</h2>
       </div>
 
       <div class="about-me-info">
@@ -88,8 +88,54 @@
     </section>
     <!-- Work Section  -->
     <section id="work" class="projects">
-      <div>
-        <h4 class="section-title">Work</h4>
+      <div class="flex-row">
+        <h2 class="section-title">Work</h2>
+      </div>
+
+      <div class="flex-container">
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
+        <a href="" class="flex-item">
+          <div>
+            <h3>Run Buddy</h3>
+            <span>HTML/CSS</span>
+          </div>
+        </a>
       </div>
     </section>
     <!-- Contact Section  -->
