--- a/index.html
+++ b/index.html
@@ -143,8 +143,27 @@
       <div>
         <h4 class="section-title">Contact</h4>
       </div>
-
       <p>Have a question or want to work together?</p>
+
+      <div class="contact-container">
+        <form action="">
+          <input type="text" name="name" id="name" placeholder="Name" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter Email"
+          />
+          <textarea
+            name="text-area"
+            id="text-area"
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+          ></textarea>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </section>
     <!-- Footer Section  -->
     <footer class="footer">
