included styling for contact section

--- a/index.html
+++ b/index.html
@@ -141,29 +141,22 @@
     <!-- Contact Section  -->
     <section id="contact" class="contact">
       <div>
-        <h4 class="section-title">Contact</h4>
+        <h2 class="section-title">Contact</h2>
       </div>
       <p>Have a question or want to work together?</p>
 
-      <div class="contact-container">
-        <form action="">
-          <input type="text" name="name" id="name" placeholder="Name" />
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Enter Email"
-          />
-          <textarea
-            name="text-area"
-            id="text-area"
-            cols="30"
-            rows="10"
-            placeholder="Your Message"
-          ></textarea>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
+      <form action="" class="contact-form">
+        <input type="text" name="name" id="name" placeholder="Name" />
+        <input type="email" name="email" id="email" placeholder="Enter Email" />
+        <textarea
+          name="text-area"
+          id="text-area"
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <button type="submit">Submit</button>
+      </form>
     </section>
     <!-- Footer Section  -->
     <footer class="footer">
