completed contact me section structure

--- a/index.html
+++ b/index.html
@@ -145,19 +145,13 @@
       </div>
       <p>Have a question or want to work together?</p>
 
-      <form action="" class="contact-form">
-        <input type="text" name="name" id="name" placeholder="Name" />
-        <input type="email" name="email" id="email" placeholder="Enter Email" />
-        <textarea
-          name="text-area"
-          id="text-area"
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-        ></textarea>
-        <button type="submit">Submit</button>
-      </form>
+      <div class="button-container">
+        <a class="contact-me-button" href="mailto:shanebramble96@hotmail.com"
+          >CONTACT ME</a
+        >
+      </div>
     </section>
+
     <!-- Footer Section  -->
     <footer class="footer">
       <p>&copy; Copyright 2022 Shane Bramble-Wade</p>
