changes the color themes of all sections.

--- a/index.html
+++ b/index.html
@@ -93,46 +93,74 @@
       </div>
 
       <div class="flex-container">
-        <a href="" class="flex-item">
+        <a
+          href="https://kranniax.github.io/run-buddy/"
+          class="flex-item run-buddy"
+          target="_blank"
+        >
           <div>
             <h3>Run Buddy</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
-        <a href="" class="flex-item">
+        <a
+          href="https://kranniax.github.io/marketing-agency/"
+          class="flex-item market-agency"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Market Agency</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
-        <a href="" class="flex-item">
+        <a
+          href="https://css-mysite.netlify.app/"
+          class="flex-item"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>CSS - My Site (Netlify)</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
-        <a href="" class="flex-item">
+        <a
+          href="https://tinderdog101.netlify.app/"
+          class="flex-item"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Tindog</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
 
-        <a href="" class="flex-item">
+        <a
+          href="https://shanebramble.github.io/recipe-renegade/"
+          class="flex-item"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Recipe Renegade</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
-        <a href="" class="flex-item">
+        <a
+          href="https://fathomless-beach-31374.herokuapp.com/"
+          class="flex-item"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Price Tracker</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
-        <a href="" class="flex-item">
+        <a
+          href="https://s-m-a-c.netlify.app/"
+          class="flex-item"
+          target="_blank"
+        >
           <div>
-            <h3>Run Buddy</h3>
+            <h3>S.M.A.C - Smart Mail Automated Center</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
